@@ -1,3 +1,10 @@
+2007-03-14  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.citedcat) :
+	added
+	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_citedcat)
+	(R_igraph_measure_dynamics_citedcat_st) : added
+
 2007-03-12  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id)
